@@ -13,6 +13,7 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
@@ -26,13 +27,11 @@ import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardLongFieldRange;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.state;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithActivePrimary;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithAssignedPrimariesAndReplicas;
@@ -66,25 +65,22 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
 
     public void testEmptyTaskListProducesSameClusterState() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, Collections.emptyList());
-        assertSame(clusterState, result.resultingState);
+        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, List.of());
+        assertSame(clusterState, result.resultingState());
     }
 
     public void testNonExistentIndexMarkedAsSuccessful() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final StartedShardEntry entry = new StartedShardEntry(
-            new ShardId("test", "_na", 0),
-            "aId",
-            randomNonNegativeLong(),
-            "test",
-            ShardLongFieldRange.UNKNOWN
+        final StartedShardUpdateTask entry = new StartedShardUpdateTask(
+            new StartedShardEntry(new ShardId("test", "_na", 0), "aId", randomNonNegativeLong(), "test", ShardLongFieldRange.UNKNOWN),
+            createTestListener()
         );
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(entry));
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(1));
-        assertThat(result.executionResults.containsKey(entry), is(true));
-        assertThat(result.executionResults.get(entry).isSuccess(), is(true));
+        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, List.of(entry));
+        assertSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(1));
+        assertThat(result.executionResults().containsKey(entry), is(true));
+        assertThat(result.executionResults().get(entry).isSuccess(), is(true));
     }
 
     public void testNonExistentShardsAreMarkedAsSuccessful() throws Exception {
@@ -92,38 +88,44 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ClusterState clusterState = stateWithActivePrimary(indexName, true, randomInt(2), randomInt(2));
 
         final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = Stream.concat(
+        final List<StartedShardUpdateTask> tasks = Stream.concat(
             // Existent shard id but different allocation id
             IntStream.range(0, randomIntBetween(1, 5))
                 .mapToObj(
-                    i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), 0),
-                        String.valueOf(i),
-                        0L,
-                        "allocation id",
-                        ShardLongFieldRange.UNKNOWN
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), 0),
+                            String.valueOf(i),
+                            0L,
+                            "allocation id",
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
                     )
                 ),
             // Non existent shard id
             IntStream.range(1, randomIntBetween(2, 5))
                 .mapToObj(
-                    i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), i),
-                        String.valueOf(i),
-                        0L,
-                        "shard id",
-                        ShardLongFieldRange.UNKNOWN
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), i),
+                            String.valueOf(i),
+                            0L,
+                            "shard id",
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
                     )
                 )
 
         ).collect(Collectors.toList());
 
         final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
+        assertSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(tasks.size()));
         tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
         });
     }
 
@@ -132,25 +134,30 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ClusterState clusterState = stateWithAssignedPrimariesAndReplicas(new String[] { indexName }, randomIntBetween(2, 10), 1);
 
         final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards())).mapToObj(i -> {
-            final ShardId shardId = new ShardId(indexMetadata.getIndex(), i);
-            final IndexShardRoutingTable shardRoutingTable = clusterState.routingTable().shardRoutingTable(shardId);
-            final String allocationId;
-            if (randomBoolean()) {
-                allocationId = shardRoutingTable.primaryShard().allocationId().getId();
-            } else {
-                allocationId = shardRoutingTable.replicaShards().iterator().next().allocationId().getId();
-            }
-            final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
-            return new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN);
-        }).collect(Collectors.toList());
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards()))
+            .mapToObj(i -> {
+                final ShardId shardId = new ShardId(indexMetadata.getIndex(), i);
+                final IndexShardRoutingTable shardRoutingTable = clusterState.routingTable().shardRoutingTable(shardId);
+                final String allocationId;
+                if (randomBoolean()) {
+                    allocationId = shardRoutingTable.primaryShard().allocationId().getId();
+                } else {
+                    allocationId = shardRoutingTable.replicaShards().iterator().next().allocationId().getId();
+                }
+                final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
+                return new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                );
+            })
+            .collect(Collectors.toList());
 
         final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
+        assertSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(tasks.size()));
         tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
         });
     }
 
@@ -164,22 +171,34 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ShardRouting primaryShard = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
         final String primaryAllocationId = primaryShard.allocationId().getId();
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
+        final List<StartedShardUpdateTask> tasks = new ArrayList<>();
+        tasks.add(
+            new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                createTestListener()
+            )
+        );
         if (randomBoolean()) {
             final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
             final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
+            tasks.add(
+                new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                )
+            );
         }
         final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
+        assertNotSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(tasks.size()));
         tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
+            final IndexShardRoutingTable shardRoutingTable = result.resultingState()
+                .routingTable()
+                .shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.STARTED));
         });
     }
 
@@ -193,19 +212,26 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final String allocationId = shardRouting.allocationId().getId();
         final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
 
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(2, 10))
-            .mapToObj(i -> new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN))
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(2, 10))
+            .mapToObj(
+                i -> new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                )
+            )
             .collect(Collectors.toList());
 
         final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
+        assertNotSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(tasks.size()));
         tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
+            final IndexShardRoutingTable shardRoutingTable = result.resultingState()
+                .routingTable()
+                .shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.STARTED));
         });
     }
 
@@ -225,41 +251,47 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ShardId shardId = new ShardId(clusterState.metadata().index(indexName).getIndex(), shard);
         final String primaryAllocationId = clusterState.routingTable().shardRoutingTable(shardId).primaryShard().allocationId().getId();
         {
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                primaryAllocationId,
-                primaryTerm - 1,
-                "primary terms does not match on primary",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    primaryAllocationId,
+                    primaryTerm - 1,
+                    "primary terms does not match on primary",
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.INITIALIZING));
-            assertSame(clusterState, result.resultingState);
+            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, List.of(task));
+            assertSame(clusterState, result.resultingState());
+            assertThat(result.executionResults().size(), equalTo(1));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
+            IndexShardRoutingTable shardRoutingTable = result.resultingState().routingTable().shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.INITIALIZING));
+            assertSame(clusterState, result.resultingState());
         }
         {
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                primaryAllocationId,
-                primaryTerm,
-                "primary terms match on primary",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    primaryAllocationId,
+                    primaryTerm,
+                    "primary terms match on primary",
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
-            clusterState = result.resultingState;
+            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, result.resultingState());
+            assertThat(result.executionResults().size(), equalTo(1));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
+            IndexShardRoutingTable shardRoutingTable = result.resultingState().routingTable().shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.STARTED));
+            assertNotSame(clusterState, result.resultingState());
+            clusterState = result.resultingState();
         }
         {
             final long replicaPrimaryTerm = randomBoolean() ? primaryTerm : primaryTerm - 1;
@@ -271,22 +303,19 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
                 .allocationId()
                 .getId();
 
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                replicaAllocationId,
-                replicaPrimaryTerm,
-                "test on replica",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, replicaAllocationId, replicaPrimaryTerm, "test on replica", ShardLongFieldRange.UNKNOWN),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
+            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, result.resultingState());
+            assertThat(result.executionResults().size(), equalTo(1));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
+            IndexShardRoutingTable shardRoutingTable = result.resultingState().routingTable().shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.STARTED));
+            assertNotSame(clusterState, result.resultingState());
         }
     }
 
@@ -306,24 +335,36 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
             : randomBoolean() ? ShardLongFieldRange.EMPTY
             : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange));
+        final List<StartedShardUpdateTask> tasks = new ArrayList<>();
+        tasks.add(
+            new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange),
+                createTestListener()
+            )
+        );
         if (randomBoolean()) {
             final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
             final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange));
+            tasks.add(
+                new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange),
+                    createTestListener()
+                )
+            );
         }
         final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
+        assertNotSame(clusterState, result.resultingState());
+        assertThat(result.executionResults().size(), equalTo(tasks.size()));
         tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+            assertThat(result.executionResults().containsKey(task), is(true));
+            assertThat(result.executionResults().get(task).isSuccess(), is(true));
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
+            final IndexShardRoutingTable shardRoutingTable = result.resultingState()
+                .routingTable()
+                .shardRoutingTable(task.getEntry().shardId);
+            assertThat(shardRoutingTable.getByAllocationId(task.getEntry().allocationId).state(), is(ShardRoutingState.STARTED));
 
-            final IndexLongFieldRange timestampRange = result.resultingState.metadata().index(indexName).getTimestampRange();
+            final IndexLongFieldRange timestampRange = result.resultingState().metadata().index(indexName).getTimestampRange();
             if (shardTimestampRange == ShardLongFieldRange.UNKNOWN) {
                 assertThat(timestampRange, sameInstance(IndexLongFieldRange.UNKNOWN));
             } else if (shardTimestampRange == ShardLongFieldRange.EMPTY) {
@@ -336,10 +377,14 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         });
     }
 
-    private ClusterStateTaskExecutor.ClusterTasksResult<?> executeTasks(final ClusterState state, final List<StartedShardEntry> tasks)
+    private ClusterStateTaskExecutor.ClusterTasksResult<?> executeTasks(final ClusterState state, final List<StartedShardUpdateTask> tasks)
         throws Exception {
-        final ClusterStateTaskExecutor.ClusterTasksResult<StartedShardEntry> result = executor.execute(state, tasks);
+        final ClusterStateTaskExecutor.ClusterTasksResult<StartedShardUpdateTask> result = executor.execute(state, tasks);
         assertThat(result, notNullValue());
         return result;
+    }
+
+    private static <T> ActionListener<T> createTestListener() {
+        return ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); });
     }
 }
